Sun Jan 18 03:05:20 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (addrinfo_mdump): new method.
	  (addrinfo_mload): new method.
	  (Init_addrinfo): define the method above.

	* ext/socket/constants.c (constant_arg): str_to_int's first argument
	  constified.

	* ext/socket/mkconstants.rb (gen_name_to_int_decl): generated
	  function's first argument constified.
	  (gen_name_to_int_func_in_guard): ditto.
	  (ipproto_to_int): generated.

	* ext/socket/rubysocket.h (IS_IP_FAMILY): moved from raddrinfo.c.

Sun Jan 18 01:37:50 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sock_s_getnameinfo): accept AddrInfo object.

	* ext/socket/raddrinfo.c (rb_check_sockaddr_string_type): defined.

	* ext/socket/rubysocket.h (rb_check_sockaddr_string_type): declared.

Sat Jan 17 22:01:15 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: new file.

Sat Jan 17 19:33:48 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in (VCSUP): fixed the cases for git-svn or git.

	* win32/Makefile.sub (VCSUP): ditto.

	* Makefile.in (up): `cd' is necessary for git and git-svn.

Sat Jan 17 19:16:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: generate a header file for generated
	  functions.

	* ext/socket/rubysocket.h: include constdefs.h.  don't declare
	  generated functions.

	* ext/socket/constants.c: include constdefs.c instead of constants.h.

	* ext/socket/depend: dependency updated.

Sat Jan 17 17:58:22 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/xmp.rb: multilingualizes XMP::StringInputMethod.
	  [ruby-core:21383].

Sat Jan 17 15:01:22 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (make_inspectname): add a res argument to
	  suppress numeric inspectname.
	  (init_addrinfo_getaddrinfo): call make_inspectname here.
	  (addrinfo_firstonly_new): follow make_inspectname change.
	  (addrinfo_list_new): ditto.
	  (addrinfo_initialize): follow init_addrinfo_getaddrinfo change.
