@@ -1,3 +1,8 @@
+Sun Jan 18 03:33:23 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/raddrinfo.c (addrinfo_mdump): don't use symbol.
+	  (addrinfo_mload): ditto.
+
 Sun Jan 18 03:05:20 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/raddrinfo.c (addrinfo_mdump): new method.
